fixed spacing issue on title screen

--- a/css/style.css
+++ b/css/style.css
@@ -762,6 +762,7 @@ color: #000000;
   padding-left: 0;
   margin: 0;
   text-align: center;
+
 }
 
 .social-icon:before,
@@ -781,14 +782,14 @@ color: #000000;
 
 .social-icon li a {
   display: block;
-  width: 60px;
-  height: 60px;
-  line-height: 66px;
+  width: 80px;
+  height: 80px;
+  line-height: 86px;
   color: #fff;
   text-align: center;
   border: 0 none;
   border-radius: 50%;
-  font-size: 27px;
+  font-size: 37px;
   box-shadow: 0px 1px 2px 0px rgba(90, 91, 95, 0.15);
   transition: all 0.3s ease-in-out;
 }
